@@ -33,6 +33,8 @@
         <aspectj-maven-plugin-version>1.14.0</aspectj-maven-plugin-version>
         <!-- Skip integration tests? -->
         <skip-integration-tests>false</skip-integration-tests>
+        <benchmark.warmup.iterations>2000</benchmark.warmup.iterations>
+        <benchmark.measure.iterations>10000</benchmark.measure.iterations>
     </properties>
     <dependencies>
         <dependency>
@@ -413,6 +415,34 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>benchmarks</id>
+            <properties>
+                <skip-integration-tests>true</skip-integration-tests>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin-version}</version>
+                        <configuration>
+                            <argLine>--enable-preview</argLine>
+                            <includes>
+                                <include>**/*Benchmark.java</include>
+                            </includes>
+                            <excludes/>
+                            <systemPropertyVariables>
+                                <benchmark.warmup.iterations>${benchmark.warmup.iterations}</benchmark.warmup.iterations>
+                                <benchmark.measure.iterations>${benchmark.measure.iterations}</benchmark.measure.iterations>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <reporting>
         <plugins>
             <plugin>
